--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -134,21 +134,21 @@ UPOZORNĚNÍ: Toto nastavení nebylo podrobeno rozsáhlému testování a mohlo 
     <string name="remove_paired_car">Odstranit spárované vozidlo</string>
     <string name="choose_cars">Vyberte vozidlo(a)</string>
     <string name="tutorial_carremover">Věděli jste, že si v Android Auto nemůžete vybrat, které vozidlo chcete odstranit a můžete odstranit pouze všechna vozidla najednou? Tato volba vás zachrání, když chcete smazat jen jedno vozidlo. Stačí si vybrat, které z aut chcete smazat a potvrdit.</string>
-    <string name="custom_startup_option">Custom boot option</string>
-    <string name="tutorial_custom_startup_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user set what to open when Android Auto is started. You can choose to open latest navigation app, latest music app or just the launcher. Android Auto 6.8 or superior is required.</string>
-    <string name="custom_hotseat_option">Custom seating option</string>
-    <string name="tutorial_hotseat_option">This tweak will activate a new option inside Android Auto\'s settings that will let the user decide whether the driving position is left or right so that Android Auto can adapt its UI. Android Auto 6.9 or superior is required.</string>
-    <string name="tutorial_coolwalk">This tweak will activate a new design in Android Auto (codename Coolwalk) that can be toggled in Android Auto\'s settings and that tweaks a bit the appearance on smaller screens. This design features a always on side panel and some different graphics. This feature is in early stage at the moment. Android Auto 6.9 or superior is required.</string>
-    <string name="coolwalk_tweak">Coolwalk design</string>
-    <string name="tutorial_focus_settings">This tweak will activate a new options in Android Auto settings to manually customize whether Android Auto must be launched as soon as you connect your phone with the car. Android Auto 6.8 or superior is required.</string>
-    <string name="focus_tweak">Focus settings</string>
-    <string name="casting_app">Casting app</string>
-    <string name="tutorial_mirroring_app">This mysterious app is bundled starting from Android Auto 7.1 and it\'s supposedly a screen mirroring app, probably destined to passenger\'s Android Auto. Might not function properly.</string>
-    <string name="decline_message_tweak">Decline with message</string>
-    <string name="tutorial_decline_message">This tweak will enable the possibility to decline an incoming call with SMS (with Google Assistant).</string>
-    <string name="section_one">General tweaks</string>
-    <string name="section_two">Screen setup tweaks</string>
-    <string name="section_three">Appeareance tweaks</string>
-    <string name="section_four">Video quality settings</string>
-    <string name="section_five">Pre-activate features</string>
+    <string name="custom_startup_option">Vlastní nastavení spouštění</string>
+    <string name="tutorial_custom_startup_option">Toto nastavení aktivuje novou volbu uvnitř nastavení Android Auto, která povolí uživateli si vybrat, co chce otevřít při spuštění Android Auto. Můžete si vybrat mezi spuštěním poslední aplikace navigace, poslední hudební aplikace nebo pouze spouštěčem. Je vyžadováno Android Auto 6.8 nebo vyšší.</string>
+    <string name="custom_hotseat_option">Uživatelská volba pozice řidiče</string>
+    <string name="tutorial_hotseat_option">Toto nastavení aktivuje novou volbu uvnitř nastavení Android Auto, které umožní uživateli se rozhodnout zdali je pozice řidiče vlevo nebo vpravo. Podle toho poté Android Auto upraví své UI. Je vyžadováno Android Auto 6.9 nebo vyšší.</string>
+    <string name="tutorial_coolwalk">Toto nastavení aktivuje nový design v Android Auto (kódové označení Coolwalk), které je možno zapnout v nastavení Android Auto. Toto nastavení lehce upraví vzhled na menších obrazovkách. Tento design obsahuje vždy zobrazený postranní panel a změněnou grafiku. Tato funkce je v současnosti stále v rané fázi vývoje. Je vyžadováno Android Auto 6.9 nebo vyšší.</string>
+    <string name="coolwalk_tweak">Design Coolwalk</string>
+    <string name="tutorial_focus_settings">Toro nastavení aktivuje novou volbu uvnitř nastavení Android Auto, které umožní manuálně přizpůsobit, co se má spustit po připojení telefonu k autu. Je vyžadováno Android Auto 6.8 nebo vyšší.</string>
+    <string name="focus_tweak">Nastavení soustředění</string>
+    <string name="casting_app">Aplikace Zrcadlení</string>
+    <string name="tutorial_mirroring_app">Tato záhadná aplikace je přítomná v Android Auto od verze 7.1. Má se jednat pravděpodobně o Aplikaci pro zrcadlení obrazovky telefonu, nejspíše je aplikace určená pro Android Auto spolujezdce. Aplikace nemusí fungovat správně.</string>
+    <string name="decline_message_tweak">Odmítnout se zprávou</string>
+    <string name="tutorial_decline_message">Toto nastavení zapne možnost odmítnout příchozí hovor s SMS (skrze Google Asistenta).</string>
+    <string name="section_one">Hlavní nastavení</string>
+    <string name="section_two">Nastavení obrazovky</string>
+    <string name="section_three">Nastavení vzhledu</string>
+    <string name="section_four">Nastavení kvality videa</string>
+    <string name="section_five">Předaktivované možnosti</string>
 </resources>
